--- a/package.json
+++ b/package.json
@@ -33,9 +33,13 @@
     "@types/node": "^8.0.20",
     "@types/three": "^0.84.19",
     "awesome-typescript-loader": "^3.2.2",
+    "babel-core": "^6.25.0",
+    "babel-preset-latest": "^6.24.1",
     "css-loader": "^0.28.4",
+    "expose-loader": "^0.7.3",
     "file-loader": "^0.11.2",
     "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
