--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "zone.js": "0.8.4"
   },
   "devDependencies": {
+    "@types/jquery": "^3.2.11",
     "@types/node": "^8.0.20",
     "@types/three": "^0.84.19",
     "awesome-typescript-loader": "^3.2.2",
